--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,21 @@ img {
   margin-right: auto;
   max-width: 550px;
 }
+.btn {
+  position:relative;
+  top: 50px;
+  right: 300px;
+  height: 50px;
+  width: 100px;
+}
+#outputwell {
+  position: relative;
+  left: 100px;
+  max-width: 200px;
+  font-size: 30px;
+  height: 50px;
+}
+#output {
+  position: relative;
+  bottom: 15px;
+}
